--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <body>
-<h1>Hello World</h1>
-<p>I'm hosted with GitHub Pages.</p>
+<h1>Bio</h1>
+<p>I live in the PNW area and study plasma physics in grad school.</p>
 </body>
 </html>
