--- a/index.html
+++ b/index.html
@@ -2,6 +2,9 @@
 <html>
 <body>
 <h1>Bio</h1>
-<p>I live in the PNW area and study plasma physics in grad school.</p>
+<p>My name is Matt. Currently, I live in the PNW area and study plasma physics at the University of Washington . Besides spending my time trying to believe the lies 
+  of Magnetohydrodynamics (MHD) I'm also a member of the Aeronautics & Astronautics CubeSat Team (AACT) where I lead the communications (COM) subsystem. 
+  My curse is that I have a wide variety of interests but I try to channel them through the combination of Maxwell's equations and computers in order to stay focused 
+  and get things done. I love physics, particularly electromagnetics as you might have guessed, but at heart I am an engineer. </p>
 </body>
 </html>
